--- a/style.css
+++ b/style.css
@@ -31,9 +31,12 @@ body{
     border-radius: 20px;
 }
 .first{
-    height: 95 vh;
-    width: 95 vw;
+    height: 100 vh;
+    width: 100 vw;
     color:white;
     
+}
+h1{
+    font-size: 100px;
 }
    
